After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 749482 - x11: Fix touchpad detection
x11: Fix touchpad detection
Status: RESOLVED FIXED
Product: clutter
Classification: Platform
Component: x11
unspecified
Other All
: Normal normal
: ---
Assigned To: clutter-maint
clutter-maint
Depends on:
Blocks:
 
 
Reported: 2015-05-16 22:59 UTC by Rui Matos
Modified: 2015-05-18 09:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
x11: Fix touchpad detection (1.22 KB, patch)
2015-05-16 22:59 UTC, Rui Matos
committed Details | Review

Description Rui Matos 2015-05-16 22:59:07 UTC
Commit 79849ef1d5fff9acd310cd68d59df0c7cf2cb28f had a typo in the
device property format check. This property is formated in 8-bit
items, not 32-bit.

This went unnoticed till now because some touchpads were still being
detected as such due to a second check below:

      else if (strstr (name, "touchpad") != NULL)
        source = CLUTTER_TOUCHPAD_DEVICE;
Comment 1 Rui Matos 2015-05-16 22:59:13 UTC
Created attachment 303466 [details] [review]
x11: Fix touchpad detection
Comment 2 Emmanuele Bassi (:ebassi) 2015-05-17 11:20:14 UTC
Review of attachment 303466 [details] [review]:

Nice catch.
Comment 3 Rui Matos 2015-05-18 09:44:39 UTC
24d2114..a4aad80  clutter-1.22 -> clutter-1.22
      9f329ae..9268bb9  master -> master
      
Attachment 303466 [details] pushed as 9268bb9 - x11: Fix touchpad detection